# yeti-vm

./: .gitignore  CMakeLists.txt  license.md  readme.md
cmake/: YetiUtility.cmake  YetiVersion.cmake  riscv_toolchain.cmake
examples/: CMakeLists.txt  basic_vm.ld  lib_test.c  rv32i.S  rv32m.S  startup.S  startup.c  sys_calls_asm.S  sys_calls_main.c
scripts/: basic_vm.ld
src/: CMakeLists.txt  PackageConfig.cmake.in  YetiProjectConfig.cmake.in  elf_loader.cxx  elf_loader.hxx  elf_parser.cxx  main.cxx  stdlib.hxx  vm_base_types.cxx  vm_base_types.hxx  vm_basic.cxx  vm_basic.hxx  vm_handler.cxx  vm_handler.hxx  vm_handlers_rv32i.cxx  vm_handlers_rv32i.hxx  vm_handlers_rv32m.cxx  vm_handlers_rv32m.hxx  vm_interface.cxx  vm_interface.hxx  vm_memory.cxx  vm_memory.hxx  vm_opcode.cxx  vm_opcode.hxx  vm_syscall.cxx  vm_syscall.hxx  vm_utility.cxx  vm_utility.hxx
src/yeti-vm/: vm_base_types.cxx  vm_base_types.hxx  vm_basic.cxx  vm_basic.hxx  vm_bit_tools.cxx  vm_bit_tools.hxx  vm_handler.cxx  vm_handler.hxx  vm_handlers_rv32i.cxx  vm_handlers_rv32i.hxx  vm_handlers_rv32m.cxx  vm_handlers_rv32m.hxx  vm_interface.hxx  vm_memory.cxx  vm_memory.hxx  vm_opcode.cxx  vm_opcode.hxx  vm_shared.cxx  vm_shared.hxx  vm_syscall.cxx  vm_syscall.hxx  vm_utility.hxx
tests/: CMakeLists.txt  hex_checksum.cxx  hex_parser.cxx  mmu_tests.cxx  rv32_encoder.cxx  rv32_vm_mocks.cxx  rv32_vm_mocks.hxx  rv32ext_m_handlers.cxx  rv32i.S  rv32i_code.cxx  rv32i_handlers.cxx  rv32i_handlers.hxx  rv32i_handlers_branch.cxx  rv32i_handlers_impl.cxx  rv32i_handlers_integer_ri.cxx  rv32i_handlers_integer_rr.cxx  rv32i_handlers_load.cxx  rv32i_handlers_main.cxx  rv32i_handlers_misc_mem.cxx  rv32i_handlers_store.cxx  rv32i_handlers_system.cxx  rv32i_immediate.cxx  rv32i_mocks.cxx  rv32i_mocks.hxx  rv32i_test.cxx  rv32m.S  some.c  startup.S  sys_calls_main.c  test.S  test.c  test.cxx  view_hex_file.cxx
tests/arch-tests/: CMakeLists.txt  Makefile.in  readme.md  yeti_runner.cxx
tests/arch-tests/config/: link.ld  model_test.h
tests/data/: Makefile  model_test.h  test_vm.ld
tools/: CMakeLists.txt  make_dummy.cxx  view_hex.cxx  yeti_main.cxx
